--- a/site/css/index/index.css
+++ b/site/css/index/index.css
@@ -63,7 +63,7 @@ body {
 }
 #sidebar {
   background-color: white;
-  /*float: right;*/
+  float: right;
   display: block;
   border: 2px solid #4CAF50 /*#E37E12*/;
   margin-top: 10px;
