--- a/site/css/index/index.css
+++ b/site/css/index/index.css
@@ -24,7 +24,7 @@ body {
 }
 @media screen and (max-width: 80em) {
     #sidebar {
-      /*visibility: hidden;*/
+      visibility: hidden;
       display: block;
       float: none;
       margin-top: 0;
@@ -63,7 +63,7 @@ body {
 }
 #sidebar {
   background-color: white;
-  /*float: right;*/
+  float: right;
   display: block;
   border: 2px solid #4CAF50 /*#E37E12*/;
   margin-top: 10px;
@@ -108,13 +108,14 @@ body {
     }
 
 .toTop {
+  color: white;
   visibility: hidden;
   position: fixed;
   right: 100px;
   bottom: 100px;
   opacity: 1;
-  text-decoration: none;
 }
+
 .animtoTop {
   visibility: visible;
   animation: showTop 0.6s 1;
