--- a/site/css/index/index.css
+++ b/site/css/index/index.css
@@ -15,10 +15,10 @@ html {
 body {
   position: relative;
   margin: 0;
-  padding-bottom: 5.1rem;
+  padding-bottom: 7.4rem;
   font-size: 1.6rem;
   min-height: 100%;
-  font-family: 'Open Sans',"Helvetica Neue", Arial, sans-serif;
+  font-family: 'Open Sans Light',"Helvetica Neue", Arial, sans-serif;
   background-color: /*#0E2245*/#efefff;
   background-image: url("../../images/background-wallpaper.jpg");
 }
@@ -43,7 +43,6 @@ body {
   left: 50%;
   transform: translateX(-50%);*/
   /*justify-content: center;*/
-  padding: 40px 15px;
   max-width: /*960px*/780px;
   width: 94%;
   /*border: 1px solid #40486f;*/
@@ -55,6 +54,32 @@ body {
     color: #eaeff4;
     text-align: left;
   }
+.container {
+  padding: 0 15px;
+}
+#box {
+  color: white;
+  background-image: url('../../images/windows_10.jpg');
+  background-attachment: scroll;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 300px;
+}
+#js {
+  color: white;
+  background-color: green;
+  height: 300px;
+}
+#ng {
+  color: white;
+  background-color: red;
+  height: 300px;
+}
+#css {
+  color: white;
+  background-color: blue;
+  height: 300px;
+}
 #form {
   float: left;
   padding: 5px;
