--- a/site/css/navBar2.css
+++ b/site/css/navBar2.css
@@ -1,3 +1,4 @@
+/*Currently not using this file for navbar*/
 .nav-bar {
   position: relative;
   background-color: #0E2245/*#efefef*/;
@@ -9,7 +10,7 @@
     .nav-bar a:link,a:active { display: none; }
 }*/
   .nav-bar a:link,a:visited {
-    display: inline-block;
+    /*display: inline-block;*/
     text-decoration: none;
     padding: 15px 25px;
     /*vertical-align: middle;*/
