--- a/site/css/index/smartphone720p.css
+++ b/site/css/index/smartphone720p.css
@@ -1,15 +1,14 @@
-
-.nav-bar .fa-home {
+#nav-bar .fa-home {
 	float: none;
 	display: block;
 	padding-left: 25px;
 }
-.nav-bar .fa-search {
+#nav-bar .fa-search {
 	float: none;
 	display: block;
 	padding-left: 25px;
 }
-.nav-bar a:link,a:visited,a:active {
+#nav-bar a:link,a:visited,a:active {
 	display: block;
 	clear: all;
 	/*text-align: center;*/
